--- a/src/main/resources/templates/manager_login.html
+++ b/src/main/resources/templates/manager_login.html
@@ -265,10 +265,10 @@
 						<input type="password" name="password" required>
 					</div>
 					<div class="btn-box">
-						<button type="submit" class="btn btn-submit">SPOTへ</button>
+						<button type="submit" class="btn btn-submit" >SPOTへ</button>
 					</div>
 					<div class="btn-box">
-					<form class="login-form" th:action="@{/myPageShowList}" method="Get">
+					<form class="login-form" th:action="@{/myPageShowList}" method="post">
 						<button type="submit" class="btn btn-submit">MY PAGEへ</button>
 						</form>
 					</div>
