--- a/src/main/resources/static/css/map.css
+++ b/src/main/resources/static/css/map.css
@@ -94,10 +94,11 @@ button{
  
  }
 .submit-btn1{
-	width:100%;
+	width:50%;
 }
 .submit-btn{
-	width:100%
+	width:90%;
+	margin: 0 auto;
 }
  html{
 	position:unset;
