--- a/src/main/resources/templates/manager_login.html
+++ b/src/main/resources/templates/manager_login.html
@@ -267,12 +267,13 @@
 					<div class="btn-box">
 						<button type="submit" class="btn btn-submit" >SPOTへ</button>
 					</div>
+					</form>
 					<div class="btn-box">
-					<form class="login-form" th:action="@{/myPageShowList}" method="post">
+					<form class="login-form" th:action="@{/oritabi/myPageShowList}" method="get">
 						<button type="submit" class="btn btn-submit">MY PAGEへ</button>
-						</form>
+					</form>
 					</div>
-				</form>
+				
 				
 			</div>
 		</div>
