--- a/src/main/resources/templates/myPage.html
+++ b/src/main/resources/templates/myPage.html
@@ -265,7 +265,7 @@
 		 </div>
 		</li>
 		<li>
-		<span class="time">時間</span>
+		<span class="time"></span>
 		  <div class="sch_box"><p class="sch_title" th:text="*{touristId_5}">住所</p>
 		 </div>
 		</li>
