--- a/src/main/resources/templates/top.html
+++ b/src/main/resources/templates/top.html
@@ -6,9 +6,9 @@
 <link rel="icon" th:src="@{/imag/logo3.png}">
 <title>ORITABI</title>
 <!--headerのjs-->
-<script src="js/jquery-3.2.1.min.js"></script>
+<script src="@{js/jquery-3.2.1.min.js}"></script>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="@{https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js}"></script>
     <script th:src="@{/slick-1.8.1/slick/slick.js}"></script>
 
 <!--リセットユイ-->
@@ -274,10 +274,10 @@ return false;
 
 <body>
 	<div id ="top"></div>
-	<!-- <div class="start">
+	 <div class="start">
 		
 		<p><img th:src="@{/imag/logo2.png}" alt=""/></p>
-	</div> -->
+	</div> 
 	<header id="header">
 	<div class="container">
 		<div id="h_top">
