--- a/src/main/resources/templates/myPage.html
+++ b/src/main/resources/templates/myPage.html
@@ -283,7 +283,7 @@
 	<p class="mypage-text">名前場所（URL）</p> -->
 	<div class="mypage-inner"> 
 	
-	<a th:href="@{/oritabi/map}" class ="mypace-buttun">修正する</a>
+	<a th:href="@{/oritabi/backToMap}" class ="mypace-buttun">修正する</a>
 	<a th:href="@{/oritabi/out}" class ="mypace-buttun-a">Logout</a>
 	</div>
 	<!-- <div class="mypage-text">メモ帳</div> -->
