--- a/src/main/resources/templates/top.html
+++ b/src/main/resources/templates/top.html
@@ -274,10 +274,15 @@ return false;
 
 <body>
 	<div id ="top"></div>
-	 <div class="start">
-		
-		<p><img th:src="@{/imag/logo2.png}" alt=""/></p>
-	</div> 
+	<div id="logo_loader" class="open">
+
+	  <div class="f_logo">
+	
+		<img src="images/logo2.png" alt="logo">
+	
+	  </div>
+	
+	</div>
 	<header id="header">
 	<div class="container">
 		<div id="h_top">
