--- a/src/main/resources/templates/top.html
+++ b/src/main/resources/templates/top.html
@@ -278,7 +278,7 @@ return false;
 
 	  <div class="f_logo">
 	
-		<img src="images/logo2.png" alt="logo">
+		<img th:src="@{/imag/logo2.png}" alt=""/>
 	
 	  </div>
 	
