--- a/src/main/resources/templates/manager_page.html
+++ b/src/main/resources/templates/manager_page.html
@@ -5,8 +5,8 @@
 <head>
 <meta charset="UTF-8">
 <title>管理画面</title>
-<link rel="icon" href="../static/imag/logo3png.png">
-<link rel="stylesheet" href="css/manager_page.css">
+<link rel="icon" href="@{/imag/logo3png.png}">
+<link rel="stylesheet" th:href="@{/css/manager_page.css}">
 <!--headerのjs-->
 <script src="js/jquery-3.2.1.min.js"></script>
 
