--- a/src/main/resources/templates/manager_page.html
+++ b/src/main/resources/templates/manager_page.html
@@ -281,8 +281,8 @@
 		<!-- △△△データが一件もない場合表示△△△ -->
 	</div>
 	<!--th:if="${spotForm.newSpot}"  -->
-	<div class="travel-box" style="margin: 5px">
-		<h3>
+	<div class="travel-box">
+		<h3 class="post-tittle">
 			観光地スポット<br>
 		</h3>
 
@@ -307,7 +307,7 @@
 					th:unless="*{newSpot}" type="submit" value="送信">
 			</div>
 		</form>
-		
+			</div>
 		
 		<p th:if="${complete}" th:text="${complete}"></p>
 
@@ -372,7 +372,7 @@
 		<!-- ▼▼▼データが一件もない場合表示▼▼▼ -->
 		<p th:if="${#lists.isEmpty(spotList) && spotForm.newSpot == true}">登録されている観光情報はありません。</p>
 		<!-- △△△データが一件もない場合表示△△△ -->
-	</div>
+
 	<!-- △△△新規登録時のみ表示△△△ -->
 	<!-- ▼▼▼新規登録時でない時に表示▼▼▼ -->
 	<p th:unless="${costomerForm.newCostomer}">
