--- a/src/main/resources/templates/out.html
+++ b/src/main/resources/templates/out.html
@@ -4,23 +4,23 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 
-<link rel="icon" href="@{/imag/logo3png.png}">
-<link rel="stylesheet" href="@{/css/out.css}">
+<link th:rel="icon" href="@{/imag/logo3png.png}">
+<link th:rel="stylesheet" href="@{/css/out.css}">
 <!--headerのjs-->
 <script src="js/jquery-3.2.1.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
 <!--リセットユイ-->
-<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css">
+<link th:rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css">
 
 <!--headercss-->
-<link href="@{/css/meanmenu.css}" rel="stylesheet" type="text/css">
-<link href="@{/css/font-awesome.min.css}" rel="stylesheet" type="text/css">
-<link href="@{/css/header.css}" rel="stylesheet" type="text/css">
+<link th:href="@{/css/meanmenu.css}" rel="stylesheet" type="text/css">
+<link th:href="@{/css/font-awesome.min.css}" rel="stylesheet" type="text/css">
+<link th:href="@{/css/header.css}" rel="stylesheet" type="text/css">
 <!--css-->
-<link href="@{/css/i-style.css}" rel="stylesheet" type="text/css">
-<link href="@{/css/parts.css}" rel="stylesheet" type="text/css">
+<link th:href="@{/css/i-style.css}" rel="stylesheet" type="text/css">
+<link th:href="@{/css/parts.css}" rel="stylesheet" type="text/css">
 
 <!--font-awesome-->
 <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -180,7 +180,7 @@ $(function($){
     <header id="header">
         <div class="container">
             <div id="h_top">
-                <div class="h_logo"><a href=""><img src="@{/imag/logo2.png}" alt=""/></a></div>
+                <div class="h_logo"><a href=""><img th:src="@{/imag/logo2.png}" alt=""/></a></div>
                 <div class="h_nav">
                     <nav id="gNav">
                         <ul class="nav">
@@ -198,7 +198,7 @@ $(function($){
         
         <header class="mheader">
             <div class="pc_menuFlex">
-                <div class="i-logo"><a href="#"><img src="@{/imag/logo2.png}" alt=""/></a>
+                <div class="i-logo"><a href="#"><img th:src="@{/imag/logo2.png}" alt=""/></a>
                 </div>
                 <div class="pc_menu">
                     <ul>
