--- a/src/main/resources/templates/out.html
+++ b/src/main/resources/templates/out.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 
 <link th:rel="icon" href="@{/imag/logo3png.png}">
-<link th:rel="stylesheet" href="@{/css/out.css}">
+<link th:href="stylesheet" href="@{/css/out.css}">
 <!--headerのjs-->
 <script src="js/jquery-3.2.1.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
