--- a/src/main/resources/templates/out.html
+++ b/src/main/resources/templates/out.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 
-<link th:rel="icon" href="@{/imag/logo3png.png}">
-<link th:href="stylesheet" href="@{/css/out.css}">
+<link rel="icon" th:href="@{/imag/logo3png.png}">
+<link rel="stylesheet" th:href="@{/css/out.css}">
 <!--headerのjs-->
 <script src="js/jquery-3.2.1.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
