--- a/src/main/resources/templates/out.html
+++ b/src/main/resources/templates/out.html
@@ -184,9 +184,9 @@ $(function($){
                 <div class="h_nav">
                     <nav id="gNav">
                         <ul class="nav">
-                            <li><a href="#top">TOP</a></li>
-                            <li><a href="register.html" class="btn-sin">新規登録</a></li>
-                            <li><a href="manager_login.html"class= "btn-log">ログイン</a></li>
+                            <li><a href="@{/oritabi/top}">TOP</a></li>
+                            <li><a href="@{/oritabi/register}" class="btn-sin">新規登録</a></li>
+                            <li><a href="@{/oritabi/manager_login}"class= "btn-log">ログイン</a></li>
                         </ul>
                         <div class="mask"></div>
                     </nav>
@@ -202,9 +202,9 @@ $(function($){
                 </div>
                 <div class="pc_menu">
                     <ul>
-                        <li><a href="#top">TOP</a></li>
-                        <li><a href="register.html" class="btn-sin">新規登録</a></li>
-                        <li><a href="manager_login.html"class= "btn-log">ログイン</a></li>
+                        <li><a href="@{/oritabi/top}">TOP</a></li>
+                        <li><a href="@{/oritabi/register}" class="btn-sin">新規登録</a></li>
+                        <li><a href="@{/oritabi/manager_login}"class= "btn-log">ログイン</a></li>
                     </ul>
                 </div> 
             </div>
