--- a/src/main/resources/templates/out.html
+++ b/src/main/resources/templates/out.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 
-<link rel="icon" th:href="@{/imag/logo3png.png}">
+<link rel="icon" th:href="@{/imag/logo3.png}">
 <link rel="stylesheet" th:href="@{/css/out.css}">
 <!--headerのjs-->
 <script src="js/jquery-3.2.1.min.js"></script>
