--- a/src/main/resources/templates/out.html
+++ b/src/main/resources/templates/out.html
@@ -250,7 +250,7 @@ $(function($){
 <!--footer_メニューの中身-->
         <div class="f_open">
             <div class="f_logo">
-             <img src="../imag/logo22.png" alt=""/>
+             <img src="@{/imag/logo2.png}" alt=""/>
             </div>
             
             <div class="category_list">
