--- a/src/main/resources/templates/out.html
+++ b/src/main/resources/templates/out.html
@@ -184,9 +184,9 @@ $(function($){
                 <div class="h_nav">
                     <nav id="gNav">
                         <ul class="nav">
-                            <li><a href="@{/oritabi/top}">TOP</a></li>
-                            <li><a href="@{/oritabi/register}" class="btn-sin">新規登録</a></li>
-                            <li><a href="@{/oritabi/manager_login}"class= "btn-log">ログイン</a></li>
+                            <li><a th:href="@{/oritabi/top}">TOP</a></li>
+                            <li><a th:href="@{/oritabi/register}" class="btn-sin">新規登録</a></li>
+                            <li><a th:href="@{/oritabi/manager_login}"class= "btn-log">ログイン</a></li>
                         </ul>
                         <div class="mask"></div>
                     </nav>
@@ -198,13 +198,13 @@ $(function($){
         
         <header class="mheader">
             <div class="pc_menuFlex">
-                <div class="i-logo"><a href="#"><img th:src="@{/imag/logo2.png}" alt=""/></a>
+                <div class="i-logo"><a th:href="@{/oritabi/top}"><img th:src="@{/imag/logo2.png}" alt=""/></a>
                 </div>
                 <div class="pc_menu">
                     <ul>
-                        <li><a href="@{/oritabi/top}">TOP</a></li>
-                        <li><a href="@{/oritabi/register}" class="btn-sin">新規登録</a></li>
-                        <li><a href="@{/oritabi/manager_login}"class= "btn-log">ログイン</a></li>
+                        <li><a th:href="@{/oritabi/top}">TOP</a></li>
+                        <li><a th:href="@{/oritabi/register}" class="btn-sin">新規登録</a></li>
+                        <li><a th:href="@{/oritabi/manager_login}"class= "btn-log">ログイン</a></li>
                     </ul>
                 </div> 
             </div>
@@ -222,7 +222,7 @@ $(function($){
                              <h3 class ="lo-tittle">ログアウトしました</h3>
                      </div>
                     
-                             <div class="btn-box"><button type="submit" class="btnds btn-submit" onclick="location.href='purpose_osaka.html'">ログインページへ</button></div>
+                             <div class="btn-box"><button type="submit" class="btnds btn-submit" th:href="@{/oritabi/manager_login}">ログインページへ</button></div>
                      
              </div>
      </div>
