--- a/src/main/resources/templates/out.html
+++ b/src/main/resources/templates/out.html
@@ -180,7 +180,7 @@ $(function($){
     <header id="header">
         <div class="container">
             <div id="h_top">
-                <div class="h_logo"><a href=""><img th:src="@{/imag/logo2.png}" alt=""/></a></div>
+                <div class="h_logo"><a th:href="@{/oritabi/top}"><img th:src="@{/imag/logo2.png}" alt=""/></a></div>
                 <div class="h_nav">
                     <nav id="gNav">
                         <ul class="nav">
