--- a/src/main/resources/templates/top.html
+++ b/src/main/resources/templates/top.html
@@ -286,7 +286,7 @@ return false;
 	<header id="header">
 	<div class="container">
 		<div id="h_top">
-		    <div class="h_logo"><a href=""><img th:src="@{/imag/logo2.png}" alt=""/></a></div>
+		    <div class="h_logo"><a href="@{/oritabi/top}"><img th:src="@{/imag/logo2.png}" alt=""/></a></div>
 			<div class="h_nav">
 				<nav id="gNav">
 					<ul class="nav">
