--- a/src/main/resources/templates/manager_page.html
+++ b/src/main/resources/templates/manager_page.html
@@ -352,7 +352,7 @@
 						<td th:text="${obj.point}" align="left"></td>
 						<td th:text="${obj.imageFileName}" align="left"></td>
 						<td th:text="${obj.purposeId}"></td>
-						<td th:text="${obj.tel}"></td>
+						<!-- <td th:text="${obj.tel}"></td> -->
 						<!-- 編集ボタン -->
 						<td>
 							<form method="GET"
