--- a/src/main/resources/templates/manager_page.html
+++ b/src/main/resources/templates/manager_page.html
@@ -5,7 +5,7 @@
 <head>
 <meta charset="UTF-8">
 <title>管理画面</title>
-<link rel="icon" href="@{/imag/logo3png.png}">
+<link rel="icon" th:href="@{/imag/logo3.png}">
 <link rel="stylesheet" th:href="@{/css/manager_page.css}">
 <!--headerのjs-->
 <script src="js/jquery-3.2.1.min.js"></script>
