--- a/src/main/resources/templates/top.html
+++ b/src/main/resources/templates/top.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="icon" th:src="@{/imag/logo3.png}">
+<link rel="icon" th:href="@{/imag/logo3.png}">
 <title>ORITABI</title>
 <!--headerのjs-->
 <script src="@{js/jquery-3.2.1.min.js}"></script>
