--- a/src/main/resources/templates/out.html
+++ b/src/main/resources/templates/out.html
@@ -222,7 +222,7 @@ $(function($){
                              <h3 class ="lo-tittle">ログアウトしました</h3>
                      </div>
                     
-                             <div class="btn-box"><button type="submit" class="btnds btn-submit" th:href="@{/oritabi/manager_login}">ログインページへ</button></div>
+                             <div class="btn-box"><button type="submit" class="btnds btn-submit" th:onclick="@{/oritabi/manager_login}">ログインページへ</button></div>
                      
              </div>
      </div>
