--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -3,7 +3,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-
+<link rel="icon" th:href="@{/imag/logo3.png}">
 <link th:href="@{/css/map.css}" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -202,7 +202,7 @@
 		<div class="container">
 			<div id="h_top">
 				<div class="h_logo">
-					<a href=""><img th:src="@{/imag/logo2.png}" alt="" /></a>
+					<a th:href="@{/oritabi/top}"><img th:src="@{/imag/logo2.png}" alt="" /></a>
 				</div>
 				<div class="h_nav">
 					<nav id="gNav">
@@ -222,7 +222,7 @@
 	<header class="mheader">
 		<div class="pc_menuFlex">
 			<div class="i-logo">
-				<a href="#"><img th:src="@{/imag/logo2.png}" alt="" /></a>
+				<a th:href="@{/oritabi/top}"><img th:src="@{/imag/logo2.png}" alt="" /></a>
 			</div>
 			<div class="pc_menu">
 				<ul>
