--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -5,7 +5,7 @@
 <head>
 <meta charset="UTF-8">
 
-<link rel="icon" href="../static/imag/logo3png.png">
+<link rel="icon" th:href="@{/imag/logo3.png}">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <link th:href="@{/css/style_oomuro.css}" rel="stylesheet" type="text/css">
 <title>新規登録</title>
@@ -206,7 +206,7 @@
 		<div class="container">
 			<div id="h_top">
 				<div class="h_logo">
-					<a href=""><img th:src="@{/imag/logo2.png}" alt="" /></a>
+					<a th:href="@{/oritabi/top}"><img th:src="@{/imag/logo2.png}" alt="" /></a>
 				</div>
 				<div class="h_nav">
 					<nav id="gNav">
@@ -226,12 +226,12 @@
 	<header class="mheader">
 		<div class="pc_menuFlex">
 			<div class="i-logo">
-				<a href="#"><img th:src="@{/imag/logo2.png}" alt="" /></a>
+				<a th:href="@{/oritabi/top}"><img th:src="@{/imag/logo2.png}" alt="" /></a>
 			</div>
 			<div class="pc_menu">
 				<ul>
 					
-					<li><a href="#top">ボタン</a></li>
+					<li><a href="@{/oritabi/top}">ボタン</a></li>
 					<li><a th:href="@{/oritabi/register}" class="btn-sin">新規登録</a></li>
 					<li><a th:href="@{/oritabi/manager_login}" class="btn-log">ログイン</a></li>
 				</ul>
