--- a/src/main/resources/templates/spot.html
+++ b/src/main/resources/templates/spot.html
@@ -2,8 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
+
 	<meta charset="UTF-8">
-	<link rel="icon" href="../static/imag/logo3png.png">
+<link rel="icon" th:href="@{/imag/logo3.png}">
 	<link th:href="@{/css/style_oomuro.css}" rel="stylesheet" type="text/css">
 	<title>観光スポット一覧</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -191,7 +192,7 @@
 		<div class="container">
 			<div id="h_top">
 				<div class="h_logo">
-					<a href=""><img th:src="@{/imag/logo2.png}" alt="" /></a>
+					<a th:href="@{/oritabi/top}"><img th:src="@{/imag/logo2.png}" alt="" /></a>
 				</div>
 				<div class="h_nav">
 					<nav id="gNav">
@@ -213,7 +214,7 @@
 	<header class="mheader">
 		<div class="pc_menuFlex">
 			<div class="i-logo">
-				<a href="#"><img th:src="@{/imag/logo2.png}" alt="" /></a>
+				<a th:href="@{/oritabi/top}"><img th:src="@{/imag/logo2.png}" alt="" /></a>
 			</div>
 			<div class="pc_menu">
 				<ul>
