--- a/src/main/resources/templates/top.html
+++ b/src/main/resources/templates/top.html
@@ -290,7 +290,7 @@ return false;
 			<div class="h_nav">
 				<nav id="gNav">
 					<ul class="nav">
-						<li><a href="#top">TOP</a></li>
+						<li><a th:href="@{/oritabi/top}">TOP</a></li>
 						<li><a th:href="@{/oritabi/register}"  class="btn-sin">新規登録</a></li>
 						<li><a th:href="@{/oritabi/manager_login}" class= "btn-log">ログイン</a></li>
 					</ul>
@@ -304,7 +304,7 @@ return false;
 	
 	<header class="mheader">
 		<div class="pc_menuFlex">
-			<div class="i-logo"><a href="#"><img th:src="@{/imag/logo2.png}" alt=""/></a>
+			<div class="i-logo"><a th:href="@{/oritabi/top}"><img th:src="@{/imag/logo2.png}" alt=""/></a>
 			</div>
 			<div class="pc_menu">
 				<ul>
