--- a/src/main/resources/templates/manager_login.html
+++ b/src/main/resources/templates/manager_login.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
 <meta charset="UTF-8">
-<link rel="icon" th:src="@{/imag/logo3.png}">
+<link rel="icon" th:href="@{/imag/logo3.png}">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>ログイン画面</title>
 <link rel="stylesheet" th:href="@{/css/manager_login.css}">
