--- a/src/main/resources/static/css/register.css
+++ b/src/main/resources/static/css/register.css
@@ -14,6 +14,10 @@ article,footer, header, menu, nav, section {
   text-decoration: none;
   vertical-align: baseline;
 }
+
+.miss{
+	text-align: center;
+}
 .copyright {
 	position: absolute;
 	bottom: 0;
