--- a/src/main/resources/templates/manager_page.html
+++ b/src/main/resources/templates/manager_page.html
@@ -196,7 +196,7 @@
 </head>
 
 <body>
-	<div id ="top"></div>
+	<div id="top"></div>
 	<header id="header">
 		<div class="container">
 			<div id="h_top">
@@ -206,7 +206,7 @@
 				<div class="h_nav">
 					<nav id="gNav">
 						<ul class="nav">
-						
+
 							<li><a href="#top">TOP</a></li>
 							<li><a th:href="@{/oritabi/register}" class="btn-sin">新規登録</a></li>
 							<li><a th:href="@{/oritabi/manager_login}" class="btn-log">ログイン</a></li>
@@ -226,7 +226,7 @@
 			</div>
 			<div class="pc_menu">
 				<ul>
-					
+
 					<li><a href="#top">TOP</a></li>
 					<li><a th:href="@{/oritabi/register}" class="btn-sin">新規登録</a></li>
 					<li><a th:href="@{/oritabi/manager_login}" class="btn-log">ログイン</a></li>
@@ -235,11 +235,12 @@
 		</div>
 	</header>
 
-	
+
 
 	<!-- ▼▼▼ 新規登録時のみ表示 ▼▼▼ -->
 
-	<div th:method="POST" th:object="${'/oritabi/costomerList'}" style="margin: 5px">
+	<div th:method="POST" th:object="${'/oritabi/costomerList'}"
+		style="margin: 5px">
 		<h3 class="post-tittled">お客様一覧</h3>
 		<!-- 削除完了コメント -->
 		<p th:if="${delcomplete}" th:text="${delcomplete}"></p>
@@ -288,94 +289,95 @@
 		</h3>
 
 		<!-- ▼▼▼ Form ▼▼▼ -->
-			<div class="post-innner">
-		<form method="POST"
-			th:action="${spotForm.newSpot}? @{/oritabi/insertSpot} : @{/oritabi/spotUpdate}"
-			th:object="${spotForm}">
-			<!-- <form method="POST" th:action="@{/oritabi/insertSpot}" th:object="${spotForm}"> -->
-			<label th:unless="*{newSpot}" th:if="${spotForm.newSpot}">観光地連番</label> <input
-				th:unless="*{newSpot}" type="text" th:field="*{spotId}" th:if="${spotForm.newSpot}" /><br>
-			<label>観光地名</label><br> <input type="text" th:field="*{spotName}" /><br>
-			<label>観光地住所</label> <br><input type="text" th:field="*{address}"><br>
-			<label>WEBページ</label><br> <input type="text" th:field="*{web}"><br>
-			<label>電話番号</label><br> <input type="text" th:field="*{tel}"><br>
-			<label>オススメ</label><br>
-			<textarea rows="5"  th:field="*{point}"></textarea>
-			<br> <label>目的ID</label> <br><input type="text"
-				th:field="*{purposeId}"><br> <label>画像URL</label><br> <input
-				type="text" th:field="*{imageFileName}"><br>
-			<div class="button006">
-				<input th:if="*{newSpot}" type="submit" value="送信"> <input
-					th:unless="*{newSpot}" type="submit" value="送信">
-			</div>
-		</form>
+		<div class="post-innner">
+			<form method="POST"
+				th:action="${spotForm.newSpot}? @{/oritabi/insertSpot} : @{/oritabi/spotUpdate}"
+				th:object="${spotForm}">
+				<!-- <form method="POST" th:action="@{/oritabi/insertSpot}" th:object="${spotForm}"> -->
+				<label th:unless="*{newSpot}" th:if="${spotForm.newSpot}">観光地連番</label>
+				<input th:unless="*{newSpot}" type="text" th:field="*{spotId}"
+					th:if="${spotForm.newSpot}" /><br> <label>観光地名</label><br>
+				<input type="text" th:field="*{spotName}" /><br> <label>観光地住所</label>
+				<br>
+				<input type="text" th:field="*{address}"><br> <label>WEBページ</label><br>
+				<input type="text" th:field="*{web}"><br> <label>電話番号</label><br>
+				<input type="text" th:field="*{tel}"><br> <label>オススメ</label><br>
+				<textarea rows="5" th:field="*{point}"></textarea>
+				<br> <label>目的ID</label> <br>
+				<input type="text" th:field="*{purposeId}"><br> <label>画像URL</label><br>
+				<input type="text" th:field="*{imageFileName}"><br>
+				<div class="button006">
+					<input th:if="*{newSpot}" type="submit" value="送信"> <input
+						th:unless="*{newSpot}" type="submit" value="送信">
+				</div>
+			</form>
 		</div>
-			</div>
-		
-		<p th:if="${complete}" th:text="${complete}"></p>
+	</div>
 
-		<!-- 削除完了コメント -->
-		<p th:if="${spotDelComp}" th:text="${spotDelComp}"></p>
-		<p th:if="${updateComp}" th:text="${updateComp}"></p>
+	<p th:if="${complete}" th:text="${complete}"></p>
 
-		<!-- ▼▼▼ 観光地情報が1件でもあれば表示 ▼▼▼ -->
-		<script>
-			$(function() {
-				$(".E").click(function() {
-					$(".F").slideToggle("");
-				});
+	<!-- 削除完了コメント -->
+	<p th:if="${spotDelComp}" th:text="${spotDelComp}"></p>
+	<p th:if="${updateComp}" th:text="${updateComp}"></p>
+
+	<!-- ▼▼▼ 観光地情報が1件でもあれば表示 ▼▼▼ -->
+	<script>
+		$(function() {
+			$(".E").click(function() {
+				$(".F").slideToggle("");
 			});
-		</script>
-		<!-- <div th:if="${spotForm.newSpot}"> -->
-			<div class="E">一覧 ⇓</div>
-			
-			<div class="F">
-				<table th:unless="${#lists.isEmpty(spotList)}">
-					<tr>
-						<th>観光地連番</th>
-						<th>観光地名</th>
-						<th>観光地住所</th>
-						<th>WEBページ</th>
-						<th>電話番号</th>
-						<th>オススメ</th>
-						<th>目的ID</th>
-						<th>画像URL</th>
-						<th>編集</th>
-						<th>削除</th>
-					</tr>
-					<tr th:each="obj : ${spotList}" align="center">
-						<td th:text="${obj.spotId}"></td>
-						<td th:text="${obj.spotName}"></td>
-						<td th:text="${obj.address}" align="left"></td>
-						<td th:text="${obj.web}" align="left"></td>
-						<td th:text="${obj.tel}"></td>
-						<td th:text="${obj.point}" align="left"></td>
-						<td th:text="${obj.imageFileName}" align="left"></td>
-						<td th:text="${obj.purposeId}"></td>
-						<!-- <td th:text="${obj.tel}"></td> -->
-						<!-- 編集ボタン -->
-						<td>
-							<form method="GET"
-								th:action="@{/oritabi/{spotId}(spotId=${obj.spotId})}">
-								<input type="submit" value="編集">
-							</form>
-						</td>
-						<!-- 削除ボタン -->
-						<td>
-							<form method="POST" th:action="@{/oritabi/spotDel}">
-								<input type="hidden" name="spotId" th:value="${obj.spotId}">
-								<input type="submit" value="削除">
-							</form>
-						</td>
-					</tr>
-				</table>
-			</div>
-		</div>
-		<br>
-		<!-- △△△データが一件でもあれば表示△△△ -->
-		<!-- ▼▼▼データが一件もない場合表示▼▼▼ -->
-		<p th:if="${#lists.isEmpty(spotList) && spotForm.newSpot == true}">登録されている観光情報はありません。</p>
-		<!-- △△△データが一件もない場合表示△△△ -->
+		});
+	</script>
+	<!-- <div th:if="${spotForm.newSpot}"> -->
+	<div class="E">一覧 ⇓</div>
+
+	<div class="F">
+		<table th:unless="${#lists.isEmpty(spotList)}">
+			<tr>
+				<th>観光地連番</th>
+				<th>観光地名</th>
+				<th>観光地住所</th>
+				<th>WEBページ</th>
+				<th>電話番号</th>
+				<th>オススメ</th>
+				<th>目的ID</th>
+				<th>画像URL</th>
+				<th>編集</th>
+				<th>削除</th>
+			</tr>
+			<tr th:each="obj : ${spotList}" align="center">
+				<td th:text="${obj.spotId}"></td>
+				<td th:text="${obj.spotName}"></td>
+				<td th:text="${obj.address}" align="left"></td>
+				<td th:text="${obj.web}" align="left"></td>
+				<td th:text="${obj.tel}"></td>
+				<td th:text="${obj.point}" align="left"></td>
+				<td th:text="${obj.purposeId}"></td>
+				<td th:text="${obj.imageFileName}" align="left"></td>
+				<!-- <td th:text="${obj.tel}"></td> -->
+				<!-- 編集ボタン -->
+				<td>
+					<form method="GET"
+						th:action="@{/oritabi/{spotId}(spotId=${obj.spotId})}">
+						<input type="submit" value="編集">
+					</form>
+				</td>
+				<!-- 削除ボタン -->
+				<td>
+					<form method="POST" th:action="@{/oritabi/spotDel}">
+						<input type="hidden" name="spotId" th:value="${obj.spotId}">
+						<input type="submit" value="削除">
+					</form>
+				</td>
+			</tr>
+		</table>
+	</div>
+	</div>
+	<br>
+	<!-- △△△データが一件でもあれば表示△△△ -->
+	<!-- ▼▼▼データが一件もない場合表示▼▼▼ -->
+	<p th:if="${#lists.isEmpty(spotList) && spotForm.newSpot == true}">登録されている観光情報はありません。</p>
+	<!-- △△△データが一件もない場合表示△△△ -->
 
 	<!-- △△△新規登録時のみ表示△△△ -->
 	<!-- ▼▼▼新規登録時でない時に表示▼▼▼ -->
