--- a/src/main/resources/templates/top.html
+++ b/src/main/resources/templates/top.html
@@ -335,7 +335,7 @@ return false;
 	
 <div id="link02">
 	<div class ="oritabi-contentbox">
-		<div class ="kinki-img"><img th:src="@{/imag/siori.png}"></div>
+		<div class ="kinki-img"><img th:src="@{/imag/aaadsi.png}"></div>
 		   <div class ="oritabitittle">旅のしおり作成</div>
 		   <div class ="oritabi-box">
 			   <div class ="tabi-textbox">
