--- a/src/main/resources/templates/top.html
+++ b/src/main/resources/templates/top.html
@@ -335,7 +335,7 @@ return false;
 	
 <div id="link02">
 	<div class ="oritabi-contentbox">
-		<div class ="kinki-img"><img th:src="@{/imag/aaadsi.png}"></div>
+		<div class ="kinki-img"><img th:src="@{/imag/siori.png}"></div>
 		   <div class ="oritabitittle">旅のしおり作成</div>
 		   <div class ="oritabi-box">
 			   <div class ="tabi-textbox">
@@ -345,7 +345,7 @@ return false;
 					ワイワイ楽しく旅を盛り上げます。</p>
 
 			   </div>
-			   <div class="tabi-imgbox"><img th:src="@{/imag/gallery-bg.jpeg}"></div>
+			   <div class="tabi-imgbox"><img th:src="@{/imag/aaads.png}"></div>
 
 		   </div>
 		  
