タイムリーフ　チェック

--- a/src/main/resources/templates/manager_login.html
+++ b/src/main/resources/templates/manager_login.html
@@ -59,7 +59,7 @@
 
 <!--slider-->
 <link th:href="@{/css/slick.css}" rel="stylesheet" type="text/css">
-<link th:href="@{static/css/slick-theme.css}" rel="stylesheet"
+<link th:href="@{/css/slick-theme.css}" rel="stylesheet"
 	type="text/css">
 
 <!--headerscript-->
