--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -59,8 +59,8 @@
 <script type="text/javascript" src="js/scroll.js"></script>
 
 <!--slider-->
-<link href="../static/css/slick.css" rel="stylesheet" type="text/css">
-<link href="../static/css/slick-theme.css" rel="stylesheet"
+<link th:href="@{/css/slick.css}" rel="stylesheet" type="text/css">
+<link th:href="@{/css/slick-theme.css}" rel="stylesheet"
 	type="text/css">
 
 <!--headerscript-->
@@ -582,7 +582,7 @@
 	<!--footer_メニューの中身-->
 	<div class="f_open">
 		<div class="f_logo">
-			<img src="../imag/logo22.png" alt="" />
+			<img th:src="@{/imag/logo22.png}" alt="" />
 		</div>
 
 		<div class="category_list">
@@ -596,13 +596,13 @@
 
 			<dl>
 				<dd>
-					<a href="@{/oritabi/register}"><div class="btn-sin">新規登録</div></a>
+					<a th:href="@{/oritabi/register}"><div class="btn-sin">新規登録</div></a>
 				</dd>
 			</dl>
 
 			<dl>
 				<dd>
-					<a href="@{/oritabi/manager_login}"><div class="btn-log">ログイン</div></a>
+					<a th:href="@{/oritabi/manager_login}"><div class="btn-log">ログイン</div></a>
 				</dd>
 			</dl>
 
