タイムリーフ

--- a/src/main/resources/templates/out.html
+++ b/src/main/resources/templates/out.html
@@ -46,8 +46,8 @@
 <script type="text/javascript" src="js/scroll.js"></script>
     
 <!--slider-->
-<link href="../static/css/slick.css" rel="stylesheet" type="text/css">
-<link href="../static/css/slick-theme.css" rel="stylesheet" type="text/css">
+<link th:href="@{/css/slick.css}" rel="stylesheet" type="text/css">
+<link th:href="@{/css/slick-theme.css}" rel="stylesheet" type="text/css">
 
 <!--headerscript-->
 <script type="text/javascript">
