--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -349,7 +349,7 @@
 	<!--footer_メニューの中身-->
 	<div class="f_open">
 		<div class="f_logo">
-			<img src="@{/imag/logo22.png}" alt="" />
+			<img th:src="@{/imag/logo22.png}" alt="" />
 		</div>
 
 		<div class="category_list">
