--- a/src/main/resources/templates/manager_henshu.html
+++ b/src/main/resources/templates/manager_henshu.html
@@ -2,10 +2,10 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<link rel="icon" href="../static/imag/logo3png.png">
+<link rel="icon" th:href="@{/imag/logo3.png}">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>観光地編集</title>
-<link rel="stylesheet" href="../static/css/manager_henshu.css">
+<link rel="stylesheet" th:href="@{/css/manager_henshu.css}">
 
 <script src="js/jquery-3.2.1.min.js"></script>
 
@@ -14,13 +14,13 @@
 	href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css">
 
 <!--headercss-->
-<link href="../static/css/meanmenu.css" rel="stylesheet" type="text/css">
-<link href="../static/css/font-awesome.min.css" rel="stylesheet"
+<link th:href="@{/css/meanmenu.css}" rel="stylesheet" type="text/css">
+<link  th:href="@{/css/font-awesome.min.css}" rel="stylesheet"
 	type="text/css">
-<link href="../static/css/header.css" rel="stylesheet" type="text/css">
+<link  th:href="@{/css/header.css}" rel="stylesheet" type="text/css">
 <!--css-->
-<link href="../static/css/i-style.css" rel="stylesheet" type="text/css">
-<link href="../static/css/parts.css" rel="stylesheet" type="text/css">
+<link  th:href="@{/css/i-style.css}" rel="stylesheet" type="text/css">
+<link  th:href="@{/css/parts.css}" rel="stylesheet" type="text/css">
 
 <!--font-awesome-->
 <link rel="stylesheet" type="text/css"
@@ -57,8 +57,8 @@
 <script type="text/javascript" src="js/scroll.js"></script>
 
 <!--slider-->
-<link href="../static/css/slick.css" rel="stylesheet" type="text/css">
-<link href="../static/css/slick-theme.css" rel="stylesheet"
+<link  th:href="@{/css/slick.css}" rel="stylesheet" type="text/css">
+<link  th:href="@{/css/slick-theme.css}" rel="stylesheet"
 	type="text/css">
 
 <!--headerscript-->
@@ -198,7 +198,7 @@
 		<div class="container">
 			<div id="h_top">
 				<div class="h_logo">
-					<a href=""><img src="../static/imag/logo2.png" alt="" /></a>
+					<a href=""><img th:src="@{/imag/logo2.png}" alt="" /></a>
 				</div>
 				<div class="h_nav">
 					<nav id="gNav">
@@ -219,7 +219,7 @@
 	<header class="mheader">
 		<div class="pc_menuFlex">
 			<div class="i-logo">
-				<a href="#"><img src="../static/imag/logo2.png" alt="" /></a>
+				<a href="#"><img th:src="@{/imag/logo2.png}" alt="" /></a>
 			</div>
 			<div class="pc_menu">
 				<ul>
@@ -292,13 +292,13 @@
 
 			<dl>
 				<dd>
-					<a href="@{/oritabi/register}"><div class="btn-sin">新規登録</div></a>
+					<a th:href="@{/oritabi/register}"><div class="btn-sin">新規登録</div></a>
 				</dd>
 			</dl>
 
 			<dl>
 				<dd>
-					<a href="@{/oritabi/manager_login}"><div class="btn-log">ログイン</div></a>
+					<a th:href="@{/oritabi/manager_login}"><div class="btn-log">ログイン</div></a>
 				</dd>
 			</dl>
 
