--- a/src/main/resources/templates/manager_page.html
+++ b/src/main/resources/templates/manager_page.html
@@ -206,8 +206,7 @@
 				<div class="h_nav">
 					<nav id="gNav">
 						<ul class="nav">
-
-							<li><a href="#top">TOP</a></li>
+							<li><a th:href="@{/oritabi/top}">TOP</a></li>
 							<li><a th:href="@{/oritabi/register}" class="btn-sin">新規登録</a></li>
 							<li><a th:href="@{/oritabi/manager_login}" class="btn-log">ログイン</a></li>
 						</ul>
@@ -222,12 +221,11 @@
 	<header class="mheader">
 		<div class="pc_menuFlex">
 			<div class="i-logo">
-				<a href="#"><img src="@{/imag/logo2.png}" alt="" /></a>
+				<a href=""><img src="@{/imag/logo2.png}" alt="" /></a>
 			</div>
 			<div class="pc_menu">
-				<ul>
-
-					<li><a href="#top">TOP</a></li>
+				<ul class="nav">
+					<li><a th:href="@{/oritabi/top}">TOP</a></li>
 					<li><a th:href="@{/oritabi/register}" class="btn-sin">新規登録</a></li>
 					<li><a th:href="@{/oritabi/manager_login}" class="btn-log">ログイン</a></li>
 				</ul>
